# MemoryBankMCP

./: .gitignore  .mcp.json.example  README.md
.claude/: claude-memory-bank.md  settings.json
.claude/agents/: memory-scan.md
.claude/commands/: init-memory-bank.md  projects.md  save.md  scan-env.md  start.md
.claude/commands/workflow/: execute.md  plan.md  understand.md  update-memory.md
.claude/reference/: feedback-loops.md  risk-and-edge-cases.md
server/: .env.example  README.md  docker-compose.yml  pyproject.toml
server/memory_mcp/: db.py  embeddings.py  importer.py  retrieval.py  schema.sql  server.py
server/memory_mcp/migrations/: 001_add_task_seq.sql
server/scripts/: install.py
server/tests/: manual_phase2.py  manual_phase3.py  manual_phase5.py
server/tests/fixtures/legacy_memory_bank/: activeContext.md  devenv.md  progress.md  projectbrief.md  systemPatterns.md  taskDependencies.md
server/tests/fixtures/legacy_memory_bank/plans/: 2026-07-01-oauth-login-plan.md
